@@ -440,4 +440,12 @@ SELECT * FROM runTest('#5792.1',
   ], 'POINT(11.812029186127067 59.7793864213727)', 0
 ) WHERE true ;
 
+-- See https://trac.osgeo.org/postgis/ticket/5862
+SELECT * FROM runTest('#5862',
+  ARRAY[
+    'LINESTRING(22.780107846871616 70.70515928614921, 22.779899976871615 70.7046262461492)',
+    'LINESTRING(22.792170566871620 70.70247684614921, 22.779969266871618 70.70480392614921, 22.780038556871617 70.7049816061492, 22.796764346871615 70.7044482361492)'
+  ], 'POINT(22.780038556871617 70.7049816061492)', 0
+) WHERE true ;
+
 DROP FUNCTION runTest(text, geometry[], geometry, float8, bool);
